--- a/test/test.ipynb
+++ b/test/test.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
        "(980, 23)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +440,7 @@
        "[938 rows x 23 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,45 +461,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "brand_name                0\n",
-       "model                     0\n",
-       "price                     0\n",
-       "rating                  102\n",
-       "has_5g                    0\n",
-       "has_nfc                   0\n",
-       "has_ir_blaster            0\n",
-       "processor_name           20\n",
-       "processor_brand          20\n",
-       "num_cores                 7\n",
-       "processor_speed          43\n",
-       "battery_capacity         12\n",
-       "fast_charging             0\n",
-       "ram_capacity              0\n",
-       "internal_memory           2\n",
-       "refresh_rate              0\n",
-       "resolution                1\n",
-       "num_rear_cameras          0\n",
-       "num_front_cameras         0\n",
-       "os                       34\n",
-       "primary_camera_rear       0\n",
-       "primary_camera_front      5\n",
-       "extended_memory           0\n",
+       "brand_name               0\n",
+       "model                    0\n",
+       "price                    0\n",
+       "rating                  94\n",
+       "has_5g                   0\n",
+       "has_nfc                  0\n",
+       "has_ir_blaster           0\n",
+       "processor_name          16\n",
+       "processor_brand         16\n",
+       "num_cores                7\n",
+       "processor_speed         41\n",
+       "battery_capacity        12\n",
+       "fast_charging            0\n",
+       "ram_capacity             0\n",
+       "internal_memory          2\n",
+       "refresh_rate             0\n",
+       "resolution               1\n",
+       "num_rear_cameras         0\n",
+       "num_front_cameras        0\n",
+       "os                      34\n",
+       "primary_camera_rear      0\n",
+       "primary_camera_front     5\n",
+       "extended_memory          0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "np.sum(df.isna(), axis = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mdf\u001b[49m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "df"
    ]
   },
   {
