--- a/data/test.ipynb
+++ b/data/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,6 +53,186 @@
    "source": [
     "df = pd.read_csv('smartphone_cleaned.csv')\n",
     "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['oneplus', 'samsung', 'motorola', 'realme', 'apple', 'xiaomi',\n",
+       "       'nothing', 'oppo', 'vivo', 'poco', 'iqoo', 'jio', 'tecno',\n",
+       "       'google', 'infinix', 'nokia', 'lava', 'honor', 'nubia', 'asus',\n",
+       "       'itel', 'sony', 'huawei'], dtype=object)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['brand_name'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0      True\n",
+       "1      True\n",
+       "2      True\n",
+       "3      True\n",
+       "4      True\n",
+       "       ... \n",
+       "933    True\n",
+       "934    True\n",
+       "935    True\n",
+       "936    True\n",
+       "937    True\n",
+       "Name: has_5g, Length: 938, dtype: bool"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['has_5g']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1.0, 2.0, 3.0, 4.0, 6.0, 8.0, 12.0, 16.0, 18.0, 64.0]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sorted(df['ram_capacity'].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([120,  90,  60, 144, 165])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['refresh_rate'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['android', 'ios', 'No FM Radio', nan, 'Not Specified',\n",
+       "       'Memory Card Not Supported', 'other',\n",
+       "       'Memory Card (Hybrid), upto 256\\u2009GB'], dtype=object)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['os'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 256.,  128.,   64.,   32.,  512., 1024.,   16.,   nan,  240.,\n",
+       "          8.])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['internal_memory'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Octa Core', 'Hexa Core', 'Quad Core', nan], dtype=object)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['num_cores'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['oneplus', 'samsung', 'motorola', 'realme', 'apple', 'xiaomi',\n",
+       "       'nothing', 'oppo', 'vivo', 'poco', 'iqoo', 'jio', 'tecno',\n",
+       "       'google', 'infinix', 'nokia', 'lava', 'honor', 'nubia', 'asus',\n",
+       "       'itel', 'sony', 'huawei'], dtype=object)"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['brand_name'].unique()"
    ]
   },
   {
